--- a/_sass/helpers/_variables.scss
+++ b/_sass/helpers/_variables.scss
@@ -4,3 +4,5 @@ $purple-primary:   #ce0071;
 
 $gray-text: #858585;
 $gray-text-less: #b6b6b6;
+
+$gray-light: #EEE;
