--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -8,6 +8,10 @@
     float: left;
 }
 
+.logo {
+    width: 235px;
+}
+
 // Custom Navigation Bar
 .navbar-custom {
     background-color: white;
@@ -31,6 +35,7 @@
     &,
     &:hover,
     &:active,
+    &:focus,
     &:visited {
         text-decoration: none;
     }
@@ -76,19 +81,22 @@
     .nav-brand .logo {
         padding: 17px 10px 0 30px;
     }
+    .logo{
+        width: 215px;
+    }
     .navbar-header {
-        padding: 20px 0;
+        padding: 10px 0;
         background-color: #FFF;
         .navbar-toggle {
             margin-bottom: -20px;
-            background-color: #C8C8C8;
+            background-color: $gray-light;
             border-radius: 0;
             height: 70px;
             color: white;
             padding: 0 20px;
             margin-top: 0px;
             &.collapsed {
-                background-color: #FFF;
+                background-color: transparent;
                 color: black;
                 .icon-nav {
                     color: #000;
@@ -97,8 +105,8 @@
         }
     }
     .navbar-collapse {
-        margin-top: -10px;
-        background-color: #C8C8C8;
+        margin-top: -1px;
+        background-color: $gray-light;
         .nav_link {
             display: block;
         }
